<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/srtBanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srtBanco"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText"
            android:background="@color/fondo"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/logo_foreground"
            android:id="@+id/bancco"
            android:layout_marginTop="20dp"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:minHeight="48dp"
                android:enabled="true"
                android:layout_marginTop="25dp"/>
            <EditText
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:minHeight="48dp"
                android:enabled="true"
                android:layout_marginTop="25dp"/>
            <EditText
                android:id="@+id/banco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/banco"
                android:minHeight="48dp"
                android:enabled="true"
                android:layout_marginTop="25dp"/>
            <EditText
                android:id="@+id/saldo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/saldo"
                android:minHeight="48dp"
                android:enabled="true"
                android:layout_marginTop="25dp"/>

            <Button
                android:id="@+id/Enviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:layout_marginTop="90dp"/>
            <Button
                android:id="@+id/salir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/salir" />
        </LinearLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>