<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuentaBanco">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="40dp">
        <TextView
            android:id="@+id/srtBanco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/srtBanco"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"
            tools:ignore="HardcodedText"
            android:background="@color/fondo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="25dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_del_cliente"
                android:layout_marginBottom="20dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/saldo2" />
                <TextView
                    android:id="@+id/saldo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:enabled="true" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Movimientos"
            android:textSize="50dp"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cantidad : $" />
        <EditText
            android:id="@+id/cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:enabled="true" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="15dp">
            <Button
                android:id="@+id/hacerdep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dep"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <Button
                android:id="@+id/hacerretiro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ret"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

        </LinearLayout>
        <Button
            android:id="@+id/salir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
